# PDF-Helper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: automatic-release.yml  build-and-publish.yml  pypi.yml
examples/recipes/: bundle-with-pages.yaml  extract-important-pages.yaml  remove-pages.yaml  secure-report-workflow.yaml  split-convert-extract.yaml
schemas/: recipe-schema.json
src/pdf_helper/: __init__.py  __main__.py  recipe.py  utils.py
tests/: conftest.py  test_recipe.py
