[project]
name = "PDF-Helper"
authors = [
  {name = "CodeWriter21(Mehrad Pooryoussof)", email = "CodeWriter21@gmail.com"}
]
description = "A simple python script that helps with doing simple stuff with PDFs."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pylint.messages_control]
max-line-length = 88

disable = [
  "too-few-public-methods",
  "too-many-arguments",
  "protected-access",
  "too-many-locals",
  "fixme",
]

[tool.pylint.design]
max-returns = 8

[tool.yapf]
column_limit = 88
split_before_dot = true
split_before_first_argument = true
dedent_closing_brackets = true

[tool.isort]
line_length = 88
combine_as_imports = true
length_sort = true
order_by_type = true

[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88

[tool.ruff]
show-fixes = true
exclude = ["migrations"]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
extend-select = ["C4", "SIM", "TCH"]
