[project]
name = "PDF-Helper"
version = "0.2.1"
authors = [
  {name = "CodeWriter21(Mehrad Pooryoussof)", email = "CodeWriter21@gmail.com"}
]
description = "A simple python script that helps with doing simple stuff with PDFs."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT", file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "log21>=3.3.2",
    "pypdfium2>=4.30.0",
    "Pillow>=11.0.0"
]

[project.scripts]
pdf-helper = "pdf_helper:__main__.main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.yapf]
column_limit = 88
split_before_dot = true
split_before_first_argument = true
dedent_closing_brackets = true

[tool.isort]
line_length = 88
combine_as_imports = true
length_sort = true
order_by_type = true

[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88

[tool.ruff]
show-fixes = true
exclude = ["migrations"]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = ["C4", "SIM", "TCH", "ANN", "N", "B"]
